Added support library to travis build script. Used some material resources in sample. Started work on sample.

--- a/sample/src/main/res/layout/content_sample.xml
+++ b/sample/src/main/res/layout/content_sample.xml
@@ -11,22 +11,78 @@
   ~  See the License for the specific language governing permissions and limitations under the License.
   -->
 
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/md_screen_edge_margin_horizontal"
+    android:paddingRight="@dimen/md_screen_edge_margin_horizontal"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:clipToPadding="false"
     tools:context="com.github.andrewlord1990.materialandroidsample.SampleActivity"
     tools:showIn="@layout/activity_sample">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
-</RelativeLayout>
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <FrameLayout
+                android:layout_width="@dimen/color_square_bg_size"
+                android:layout_height="@dimen/color_square_bg_size"
+                android:layout_margin="@dimen/control_padding"
+                android:background="@color/color_square_background">
+
+                <View
+                    android:id="@+id/primary_color_square"
+                    android:layout_width="@dimen/color_square_size"
+                    android:layout_height="@dimen/color_square_size"
+                    android:layout_gravity="center"
+                    tools:background="@color/md_cyan_500"/>
+
+            </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="@dimen/color_square_bg_size"
+                android:layout_height="@dimen/color_square_bg_size"
+                android:layout_margin="@dimen/control_padding"
+                android:background="@color/color_square_background">
+
+                <View
+                    android:id="@+id/accent_color_square"
+                    android:layout_width="@dimen/color_square_size"
+                    android:layout_height="@dimen/color_square_size"
+                    android:layout_gravity="center"
+                    tools:background="@color/md_red_a200"/>
+
+            </FrameLayout>
+
+            <Button
+                android:id="@+id/color_sample_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/control_padding"
+                android:layout_marginStart="@dimen/control_padding"
+                android:text="@string/sample_color"/>
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/divider_height"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:background="@color/md_dark_divider_12"/>
+
+    </LinearLayout>
+</ScrollView>
