--- a/sample/src/main/res/layout/activity_color_sample.xml
+++ b/sample/src/main/res/layout/activity_color_sample.xml
@@ -11,8 +11,15 @@
   ~  See the License for the specific language governing permissions and limitations under the License.
   -->
 
-<resources>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.github.andrewlord1990.materialandroidsample.ColorSampleActivity">
 
-    <color name="color_square_background">@color/md_grey_300</color>
-
-</resources>
+</RelativeLayout>
