Sample: Select primary and accent colour in a dialog. Then, open a sample activity that shows these two colours next to each other (primary colour toolbar and accent colour button).

--- a/sample/src/main/res/layout/content_color_sample.xml
+++ b/sample/src/main/res/layout/content_color_sample.xml
@@ -11,29 +11,36 @@
   ~  See the License for the specific language governing permissions and limitations under the License.
   -->
 
-<android.support.design.widget.CoordinatorLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="com.github.andrewlord1990.materialandroidsample.SampleActivity">
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/md_screen_edge_margin_horizontal"
+    android:paddingRight="@dimen/md_screen_edge_margin_horizontal"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:clipToPadding="false"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <android.support.design.widget.AppBarLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+            android:layout_height="wrap_content"
+            android:text="@string/sample_color_text"/>
 
-    </android.support.design.widget.AppBarLayout>
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="Button"/>
 
-    <include layout="@layout/content_sample"/>
+    </LinearLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+</ScrollView>
