--- a/sample/src/main/res/values/dimens.xml
+++ b/sample/src/main/res/values/dimens.xml
@@ -12,11 +12,12 @@
 
 <resources>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
     <dimen name="color_square_size">38dp</dimen>
     <dimen name="color_square_bg_size">46dp</dimen>
     <dimen name="control_padding">16dp</dimen>
     <dimen name="divider_height">1dp</dimen>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="color_chooser_column_width">50dp</dimen>
+    <dimen name="color_chooser_column_spacing">8dp</dimen>
+    <dimen name="color_chooser_padding_top">30dp</dimen>
+    <dimen name="color_chooser_padding">24dp</dimen>
 </resources>
