--- a/sample/src/main/res/layout/content_sample.xml
+++ b/sample/src/main/res/layout/content_sample.xml
@@ -84,5 +84,27 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:background="@color/md_dark_divider_12"/>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/control_padding">
+
+            <Button
+                android:id="@+id/typography_sample_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="@string/sample_typography"/>
+
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/divider_height"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:background="@color/md_dark_divider_12"/>
+
     </LinearLayout>
+
 </ScrollView>
