Added lists dimensions and samples.

--- a/sample/src/main/res/layout/content_sample.xml
+++ b/sample/src/main/res/layout/content_sample.xml
@@ -23,7 +23,7 @@
     android:paddingRight="@dimen/md_screen_edge_margin_horizontal"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:clipToPadding="false"
-    tools:context="com.github.andrewlord1990.materialandroidsample.SampleActivity"
+    tools:context=".SampleActivity"
     tools:showIn="@layout/activity_sample">
 
     <LinearLayout
@@ -104,6 +104,20 @@
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:background="@color/md_dark_divider_12"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/control_padding">
+
+            <Button
+                android:id="@+id/components_sample_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="@string/sample_components"/>
+
+        </RelativeLayout>
 
     </LinearLayout>
 
