--- a/sample/src/main/res/layout/content_components_sample.xml
+++ b/sample/src/main/res/layout/content_components_sample.xml
@@ -13,8 +13,8 @@
 
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -24,25 +24,28 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:clipToPadding="false"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".color.ColorSampleActivity"
-    tools:showIn="@layout/activity_color_sample">
+    tools:showIn="@layout/activity_components_sample"
+    tools:context=".components.ComponentsSampleActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <Spinner
+            android:id="@+id/list_types"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/sample_color_text"/>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/control_padding"
+            android:entries="@array/list_sample_types"/>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/lists"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="Button"/>
+            android:layout_gravity="center_horizontal"
+            android:text="@string/sample_components_lists_button"/>
 
     </LinearLayout>
 
