--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
 <resources>
 
     <color name="color_square_background">@color/md_grey_300</color>
+    <color name="alternate_list_item_background">@color/md_grey_300</color>
 
 </resources>
