--- a/sample/src/main/res/layout/activity_grids_sample.xml
+++ b/sample/src/main/res/layout/activity_grids_sample.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (C) 2016 Andrew Lord
+  ~  Copyright (C) 2016 Andrew Lord
   ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
+  ~  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
+  ~  You may obtain a copy of the License at
   ~
   ~  http://www.apache.org/licenses/LICENSE-2.0
   ~
@@ -18,7 +18,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".components.lists.ListsSampleActivity">
+    tools:context=".components.grids.GridsSampleActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -34,6 +34,15 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_lists_sample"/>
+    <include layout="@layout/content_grids_sample"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_header_footer_24dp"/>
+
 
 </android.support.design.widget.CoordinatorLayout>
