--- a/sample/src/main/res/layout/content_grids_sample.xml
+++ b/sample/src/main/res/layout/content_grids_sample.xml
@@ -11,25 +11,16 @@
   ~  See the License for the specific language governing permissions and limitations under the License.
   -->
 
-<RelativeLayout
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/recyclerView"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/grid_cell_size"
-        tools:background="@color/md_amber_500"
-        android:contentDescription="@string/sample_grids_image_cd"/>
-
-    <FrameLayout
-        android:id="@+id/label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout_height="@dimen/md_grid_list_single_line_label_height"
-        tools:layout_alignBottom="@id/image"
-        android:background="@color/md_dark_disabled_hint_text_38"/>
-
-</RelativeLayout>
+    android:layout_height="match_parent"
+    android:clipToPadding="false"
+    android:paddingBottom="@dimen/md_grid_list_cell_spacing_small"
+    android:paddingTop="@dimen/md_grid_list_cell_spacing_small"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".components.grids.GridsSampleActivity"
+    tools:showIn="@layout/activity_grids_sample"/>
