Added a PasswordEditText view which implements the Material spec for a password view (with a visibility toggle). It has custom attributes to switch between a toggle that changes opacity, a toggle that switches to have a cross through it, being able to tint the toggle, providing custom drawables for the toggle. The view properly handles RTL, can be created and customised programmatically or through XML and samples have been added to show its use.

--- a/sample/src/main/res/layout/content_text_fields_sample.xml
+++ b/sample/src/main/res/layout/content_text_fields_sample.xml
@@ -17,11 +17,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:clipToPadding="false"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_text_fields_sample"
-    tools:context=".components.TextFieldsSampleActivity">
+    tools:context=".components.TextFieldsSampleActivity"
+    tools:showIn="@layout/activity_text_fields_sample">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,22 +30,22 @@
 
         <EditText
             style="@style/MDFullWidthEditText"
-            android:inputType="textEmailAddress"
-            android:hint="@string/sample_text_fields_1_hint"/>
+            android:hint="@string/sample_text_fields_1_hint"
+            android:inputType="textEmailAddress"/>
 
         <include layout="@layout/md_divider_horizontal_dark"/>
 
         <EditText
             style="@style/MDFullWidthEditText"
-            android:inputType="textEmailSubject"
-            android:hint="@string/sample_text_fields_2_hint"/>
+            android:hint="@string/sample_text_fields_2_hint"
+            android:inputType="textEmailSubject"/>
 
         <include layout="@layout/md_divider_horizontal_dark"/>
 
         <EditText
             style="@style/MDFullWidthEditText"
-            android:inputType="textMultiLine"
-            android:hint="@string/sample_text_fields_3_hint"/>
+            android:hint="@string/sample_text_fields_3_hint"
+            android:inputType="textMultiLine"/>
 
     </LinearLayout>
 
