--- a/sample/src/main/res/layout/content_components_sample.xml
+++ b/sample/src/main/res/layout/content_components_sample.xml
@@ -72,6 +72,14 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="@string/sample_components_text_fields_button"/>
 
+        <Button
+            android:id="@+id/password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:text="@string/sample_components_password_button"/>
+
     </LinearLayout>
 
 </ScrollView>
