--- a/sample/src/main/res/layout/content_password_sample.xml
+++ b/sample/src/main/res/layout/content_password_sample.xml
@@ -29,28 +29,28 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <com.github.andrewlord1990.materialandroid.PasswordEditText
+        <com.github.andrewlord1990.materialandroid.component.textfield.PasswordEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/control_padding"
             android:text="@string/sample_password_text"
             mdpassword:md_password_shown="true"/>
 
-        <com.github.andrewlord1990.materialandroid.PasswordEditText
+        <com.github.andrewlord1990.materialandroid.component.textfield.PasswordEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/control_padding"
             android:text="@string/sample_password_text"
             mdpassword:md_password_toggle_type="strikethrough"/>
 
-        <com.github.andrewlord1990.materialandroid.PasswordEditText
+        <com.github.andrewlord1990.materialandroid.component.textfield.PasswordEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/control_padding"
             android:text="@string/sample_password_text"
             mdpassword:md_drawable_tint_color="@color/md_green_a200"/>
 
-        <com.github.andrewlord1990.materialandroid.PasswordEditText
+        <com.github.andrewlord1990.materialandroid.component.textfield.PasswordEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/control_padding"
