Fixed some typos in PasswordEditText. Fixed build. Reworded the list and grid samples from Single-line to One-line.

--- a/sample/src/main/res/layout/content_password_sample.xml
+++ b/sample/src/main/res/layout/content_password_sample.xml
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/control_padding"
             android:text="@string/sample_password_text"
-            mdpassword:md_drawable_tint_color="@color/md_green_a200"/>
+            mdpassword:md_password_toggle_tint_color="@color/md_green_a200"/>
 
         <com.github.andrewlord1990.materialandroid.component.textfield.PasswordEditText
             android:layout_width="match_parent"
