--- a/sample/src/main/res/layout/content_password_sample.xml
+++ b/sample/src/main/res/layout/content_password_sample.xml
@@ -27,7 +27,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/md_screen_edge_margin_horizontal">
 
         <com.github.andrewlord1990.materialandroid.component.textfield.PasswordEditText
             android:layout_width="match_parent"
