Added GridItemView. Made grid sample use the GridItemView. (Currently switching text sizes for two-line view isn't working and the text colours aren't working.)

--- a/sample/src/main/res/layout/content_grids_sample.xml
+++ b/sample/src/main/res/layout/content_grids_sample.xml
@@ -11,16 +11,48 @@
   ~  See the License for the specific language governing permissions and limitations under the License.
   -->
 
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/recyclerView"
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipToPadding="false"
-    android:paddingBottom="@dimen/md_grid_list_cell_spacing_small"
-    android:paddingTop="@dimen/md_grid_list_cell_spacing_small"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".components.grids.GridsSampleActivity"
-    tools:showIn="@layout/activity_grids_sample"/>
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:id="@+id/buttons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
+
+        <Button
+            android:id="@+id/iconGravity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/sample_grids_button_icon_gravity"/>
+
+        <Button
+            android:id="@+id/textSizes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/sample_grids_button_text_sizes"/>
+
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/buttons"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/md_grid_list_cell_spacing_small"
+        android:paddingTop="@dimen/md_grid_list_cell_spacing_small"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context=".components.grids.GridsSampleActivity"
+        tools:showIn="@layout/activity_grids_sample"/>
+
+</RelativeLayout>
