--- a/sample/src/main/res/layout/grid_list_cell.xml
+++ b/sample/src/main/res/layout/grid_list_cell.xml
@@ -14,6 +14,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:mdgrid="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -28,6 +29,10 @@
         android:id="@+id/label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        mdgrid:md_grid_primary_text_color="@color/md_light_primary_text_100"
+        mdgrid:md_grid_secondary_text="@string/sample_lists_secondary"
+        mdgrid:md_grid_secondary_text_color="@color/md_light_primary_text_100"
+        mdgrid:md_grid_icon="@drawable/ic_star_white"
         tools:layout_height="@dimen/md_grid_list_single_line_label_height"
         tools:layout_alignBottom="@id/image"
         android:background="@color/md_dark_disabled_hint_text_38"/>
