--- a/sample/src/main/res/layout/content_color_sample.xml
+++ b/sample/src/main/res/layout/content_color_sample.xml
@@ -45,8 +45,8 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:text="Button"/>
+        android:layout_gravity="end"
+        android:text="@string/sample_color_button"/>
 
   </LinearLayout>
 
