Renamed all resources to "ma" prefix instead of "md" to avoid potential clashes with built-in material design resources. Removed the bulk of the colours and dimensions (for custom components). Instead focus on the library providing the commonly used resources. I.e. removed dimensions for data tables, bottom sheets etc. Most things like this will be a custom library or part of support library so won't be used. Also dropped all desktop resouces.

--- a/sample/src/main/res/layout/grid_list_cell.xml
+++ b/sample/src/main/res/layout/grid_list_cell.xml
@@ -33,12 +33,12 @@
       android:id="@+id/label"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="@color/md_text_dark_disabled_hint_38"
+      android:background="@color/ma_text_dark_disabled_hint_38"
       mdgrid:md_grid_icon="@drawable/ic_star_white"
       mdgrid:md_grid_text_primary_color="@color/md_text_light_primary_100"
       mdgrid:md_grid_text_secondary="@string/sample_lists_secondary"
       mdgrid:md_grid_text_secondary_color="@color/md_text_light_primary_100"
       tools:layout_alignBottom="@id/image"
-      tools:layout_height="@dimen/md_grid_list_single_line_label_height"/>
+      tools:layout_height="48dp"/>
 
 </RelativeLayout>
