--- a/sample/src/main/res/layout/content_typography_sample.xml
+++ b/sample/src/main/res/layout/content_typography_sample.xml
@@ -24,8 +24,8 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/md_screen_edge_margin_horizontal"
-    android:paddingRight="@dimen/md_screen_edge_margin_horizontal"
+    android:paddingLeft="@dimen/ma_screen_edge_margin_horizontal"
+    android:paddingRight="@dimen/ma_screen_edge_margin_horizontal"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".typography.TypographySampleActivity"
@@ -47,14 +47,14 @@
           android:layout_gravity="center_horizontal"
           android:text="@string/sample_typography_dark"
           android:textColor="@color/md_text_dark_title"
-          android:textSize="@dimen/md_text_title"/>
+          android:textSize="@dimen/ma_text_title"/>
 
       <View
           android:layout_width="match_parent"
           android:layout_height="@dimen/divider_height"
           android:layout_marginBottom="@dimen/activity_vertical_margin"
           android:layout_marginTop="@dimen/activity_vertical_margin"
-          android:background="@color/md_dark_divider_12"/>
+          android:background="@color/ma_divider_dark_12"/>
 
       <TextView
           android:layout_width="wrap_content"
@@ -62,7 +62,7 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Display 3"
           android:textColor="@color/md_text_dark_display_3"
-          android:textSize="@dimen/md_text_display_3"/>
+          android:textSize="@dimen/ma_text_display_3"/>
 
       <TextView
           android:layout_width="wrap_content"
@@ -70,7 +70,7 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Display 2"
           android:textColor="@color/md_text_dark_display_2"
-          android:textSize="@dimen/md_text_display_2"/>
+          android:textSize="@dimen/ma_text_display_2"/>
 
       <TextView
           android:layout_width="wrap_content"
@@ -78,7 +78,7 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Display 1"
           android:textColor="@color/md_text_dark_display_1"
-          android:textSize="@dimen/md_text_display_1"/>
+          android:textSize="@dimen/ma_text_display_1"/>
 
       <TextView
           android:layout_width="wrap_content"
@@ -86,7 +86,7 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Headline"
           android:textColor="@color/md_text_dark_headline"
-          android:textSize="@dimen/md_text_headline"/>
+          android:textSize="@dimen/ma_text_headline"/>
 
       <TextView
           android:layout_width="wrap_content"
@@ -94,7 +94,7 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Title"
           android:textColor="@color/md_text_dark_title"
-          android:textSize="@dimen/md_text_title"/>
+          android:textSize="@dimen/ma_text_title"/>
 
       <TextView
           android:layout_width="wrap_content"
@@ -102,31 +102,31 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Subheading"
           android:textColor="@color/md_text_dark_subheading"
-          android:textSize="@dimen/md_text_subheading"/>
+          android:textSize="@dimen/ma_text_subheading"/>
 
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Body"
-          android:textColor="@color/md_text_dark_body_1"
-          android:textSize="@dimen/md_text_body_1"/>
+          android:textColor="@color/ma_text_dark_body_1"
+          android:textSize="@dimen/ma_text_body_1"/>
 
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Caption"
-          android:textColor="@color/md_text_dark_caption"
-          android:textSize="@dimen/md_text_caption"/>
+          android:textColor="@color/ma_text_dark_caption"
+          android:textSize="@dimen/ma_text_caption"/>
 
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Button"
-          android:textColor="@color/md_text_dark_button"
-          android:textSize="@dimen/md_text_button"/>
+          android:textColor="@color/ma_text_dark_button"
+          android:textSize="@dimen/ma_text_button"/>
 
     </LinearLayout>
 
@@ -143,14 +143,14 @@
           android:layout_gravity="center_horizontal"
           android:text="@string/sample_typography_light"
           android:textColor="@color/md_text_light_title"
-          android:textSize="@dimen/md_text_title"/>
+          android:textSize="@dimen/ma_text_title"/>
 
       <View
           android:layout_width="match_parent"
           android:layout_height="@dimen/divider_height"
           android:layout_marginBottom="@dimen/activity_vertical_margin"
           android:layout_marginTop="@dimen/activity_vertical_margin"
-          android:background="@color/md_light_divider_12"/>
+          android:background="@color/md_divider_light_12"/>
 
 
       <TextView
@@ -159,7 +159,7 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Display 3"
           android:textColor="@color/md_text_light_display_3"
-          android:textSize="@dimen/md_text_display_3"/>
+          android:textSize="@dimen/ma_text_display_3"/>
 
       <TextView
           android:layout_width="wrap_content"
@@ -167,7 +167,7 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Display 2"
           android:textColor="@color/md_text_light_display_2"
-          android:textSize="@dimen/md_text_display_2"/>
+          android:textSize="@dimen/ma_text_display_2"/>
 
       <TextView
           android:layout_width="wrap_content"
@@ -175,7 +175,7 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Display 1"
           android:textColor="@color/md_text_light_display_1"
-          android:textSize="@dimen/md_text_display_1"/>
+          android:textSize="@dimen/ma_text_display_1"/>
 
       <TextView
           android:layout_width="wrap_content"
@@ -183,7 +183,7 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Headline"
           android:textColor="@color/md_text_light_headline"
-          android:textSize="@dimen/md_text_headline"/>
+          android:textSize="@dimen/ma_text_headline"/>
 
       <TextView
           android:layout_width="wrap_content"
@@ -191,7 +191,7 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Title"
           android:textColor="@color/md_text_light_title"
-          android:textSize="@dimen/md_text_title"/>
+          android:textSize="@dimen/ma_text_title"/>
 
       <TextView
           android:layout_width="wrap_content"
@@ -199,7 +199,7 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Subheading"
           android:textColor="@color/md_text_light_subheading"
-          android:textSize="@dimen/md_text_subheading"/>
+          android:textSize="@dimen/ma_text_subheading"/>
 
       <TextView
           android:layout_width="wrap_content"
@@ -207,7 +207,7 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Body"
           android:textColor="@color/md_text_light_body_1"
-          android:textSize="@dimen/md_text_body_1"/>
+          android:textSize="@dimen/ma_text_body_1"/>
 
       <TextView
           android:layout_width="wrap_content"
@@ -215,7 +215,7 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Caption"
           android:textColor="@color/md_text_light_caption"
-          android:textSize="@dimen/md_text_caption"/>
+          android:textSize="@dimen/ma_text_caption"/>
 
       <TextView
           android:layout_width="wrap_content"
@@ -223,7 +223,7 @@
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Button"
           android:textColor="@color/md_text_light_button"
-          android:textSize="@dimen/md_text_button"/>
+          android:textSize="@dimen/ma_text_button"/>
 
     </LinearLayout>
 
