--- a/sample/src/main/res/layout/content_password_sample.xml
+++ b/sample/src/main/res/layout/content_password_sample.xml
@@ -23,6 +23,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
+    android:paddingTop="@dimen/ma_screen_edge_margin_vertical"
+    android:paddingBottom="@dimen/ma_screen_edge_margin_vertical"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".components.PasswordFieldsSampleActivity"
@@ -32,36 +34,39 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      android:padding="@dimen/ma_screen_edge_margin_horizontal">
+      android:paddingLeft="@dimen/ma_screen_edge_margin_horizontal"
+      android:paddingStart="@dimen/ma_screen_edge_margin_horizontal"
+      android:paddingRight="@dimen/ma_screen_edge_margin_horizontal"
+      android:paddingEnd="@dimen/ma_screen_edge_margin_horizontal">
 
     <com.github.andrewlord1990.materialandroid.component.textfield.PasswordEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/control_padding"
         android:text="@string/sample_password_text"
-        mdpassword:md_password_shown="true"/>
+        mdpassword:ma_password_shown="true"/>
 
     <com.github.andrewlord1990.materialandroid.component.textfield.PasswordEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/control_padding"
         android:text="@string/sample_password_text"
-        mdpassword:md_password_toggle_type="strikethrough"/>
+        mdpassword:ma_password_toggle_type="strikethrough"/>
 
     <com.github.andrewlord1990.materialandroid.component.textfield.PasswordEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/control_padding"
         android:text="@string/sample_password_text"
-        mdpassword:md_password_toggle_tint_color="@color/md_green_a200"/>
+        mdpassword:ma_password_toggle_tint_color="@color/ma_green_a200"/>
 
     <com.github.andrewlord1990.materialandroid.component.textfield.PasswordEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/control_padding"
         android:text="@string/sample_password_text"
-        mdpassword:md_password_hidden_drawable="@drawable/ic_cross_24dp"
-        mdpassword:md_password_shown_drawable="@drawable/ic_tick_24dp"/>
+        mdpassword:ma_password_hidden_drawable="@drawable/ic_cross_24dp"
+        mdpassword:ma_password_shown_drawable="@drawable/ic_tick_24dp"/>
 
   </LinearLayout>
 
