--- a/sample/src/main/res/layout/content_typography_sample.xml
+++ b/sample/src/main/res/layout/content_typography_sample.xml
@@ -23,10 +23,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingTop="@dimen/ma_screen_edge_margin_vertical"
+    android:paddingBottom="@dimen/ma_screen_edge_margin_vertical"
     android:paddingLeft="@dimen/ma_screen_edge_margin_horizontal"
+    android:paddingStart="@dimen/ma_screen_edge_margin_horizontal"
     android:paddingRight="@dimen/ma_screen_edge_margin_horizontal"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingEnd="@dimen/ma_screen_edge_margin_horizontal"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".typography.TypographySampleActivity"
     tools:showIn="@layout/activity_typography_sample">
@@ -46,14 +48,14 @@
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:text="@string/sample_typography_dark"
-          android:textColor="@color/md_text_dark_title"
+          android:textColor="@color/ma_text_dark_primary_87"
           android:textSize="@dimen/ma_text_title"/>
 
       <View
           android:layout_width="match_parent"
           android:layout_height="@dimen/divider_height"
-          android:layout_marginBottom="@dimen/activity_vertical_margin"
-          android:layout_marginTop="@dimen/activity_vertical_margin"
+          android:layout_marginBottom="@dimen/control_padding"
+          android:layout_marginTop="@dimen/control_padding"
           android:background="@color/ma_divider_dark_12"/>
 
       <TextView
@@ -61,7 +63,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Display 3"
-          android:textColor="@color/md_text_dark_display_3"
+          android:textColor="@color/ma_text_dark_secondary_54"
           android:textSize="@dimen/ma_text_display_3"/>
 
       <TextView
@@ -69,7 +71,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Display 2"
-          android:textColor="@color/md_text_dark_display_2"
+          android:textColor="@color/ma_text_dark_secondary_54"
           android:textSize="@dimen/ma_text_display_2"/>
 
       <TextView
@@ -77,7 +79,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Display 1"
-          android:textColor="@color/md_text_dark_display_1"
+          android:textColor="@color/ma_text_dark_secondary_54"
           android:textSize="@dimen/ma_text_display_1"/>
 
       <TextView
@@ -85,7 +87,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Headline"
-          android:textColor="@color/md_text_dark_headline"
+          android:textColor="@color/ma_text_dark_primary_87"
           android:textSize="@dimen/ma_text_headline"/>
 
       <TextView
@@ -93,7 +95,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Title"
-          android:textColor="@color/md_text_dark_title"
+          android:textColor="@color/ma_text_dark_primary_87"
           android:textSize="@dimen/ma_text_title"/>
 
       <TextView
@@ -101,7 +103,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Subheading"
-          android:textColor="@color/md_text_dark_subheading"
+          android:textColor="@color/ma_text_dark_primary_87"
           android:textSize="@dimen/ma_text_subheading"/>
 
       <TextView
@@ -109,7 +111,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Body"
-          android:textColor="@color/ma_text_dark_body_1"
+          android:textColor="@color/ma_text_dark_primary_87"
           android:textSize="@dimen/ma_text_body_1"/>
 
       <TextView
@@ -117,7 +119,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Caption"
-          android:textColor="@color/ma_text_dark_caption"
+          android:textColor="@color/ma_text_dark_secondary_54"
           android:textSize="@dimen/ma_text_caption"/>
 
       <TextView
@@ -125,7 +127,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Button"
-          android:textColor="@color/ma_text_dark_button"
+          android:textColor="@color/ma_text_dark_primary_87"
           android:textSize="@dimen/ma_text_button"/>
 
     </LinearLayout>
@@ -142,14 +144,14 @@
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:text="@string/sample_typography_light"
-          android:textColor="@color/md_text_light_title"
+          android:textColor="@color/ma_text_light_primary_100"
           android:textSize="@dimen/ma_text_title"/>
 
       <View
           android:layout_width="match_parent"
           android:layout_height="@dimen/divider_height"
-          android:layout_marginBottom="@dimen/activity_vertical_margin"
-          android:layout_marginTop="@dimen/activity_vertical_margin"
+          android:layout_marginTop="@dimen/control_padding"
+          android:layout_marginBottom="@dimen/control_padding"
           android:background="@color/md_divider_light_12"/>
 
 
@@ -158,7 +160,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Display 3"
-          android:textColor="@color/md_text_light_display_3"
+          android:textColor="@color/ma_text_light_secondary_70"
           android:textSize="@dimen/ma_text_display_3"/>
 
       <TextView
@@ -166,7 +168,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Display 2"
-          android:textColor="@color/md_text_light_display_2"
+          android:textColor="@color/ma_text_light_secondary_70"
           android:textSize="@dimen/ma_text_display_2"/>
 
       <TextView
@@ -174,7 +176,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Display 1"
-          android:textColor="@color/md_text_light_display_1"
+          android:textColor="@color/ma_text_light_secondary_70"
           android:textSize="@dimen/ma_text_display_1"/>
 
       <TextView
@@ -182,7 +184,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Headline"
-          android:textColor="@color/md_text_light_headline"
+          android:textColor="@color/ma_text_light_primary_100"
           android:textSize="@dimen/ma_text_headline"/>
 
       <TextView
@@ -190,7 +192,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Title"
-          android:textColor="@color/md_text_light_title"
+          android:textColor="@color/ma_text_light_primary_100"
           android:textSize="@dimen/ma_text_title"/>
 
       <TextView
@@ -198,7 +200,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Subheading"
-          android:textColor="@color/md_text_light_subheading"
+          android:textColor="@color/ma_text_light_primary_100"
           android:textSize="@dimen/ma_text_subheading"/>
 
       <TextView
@@ -206,7 +208,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Body"
-          android:textColor="@color/md_text_light_body_1"
+          android:textColor="@color/ma_text_light_primary_100"
           android:textSize="@dimen/ma_text_body_1"/>
 
       <TextView
@@ -214,7 +216,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Caption"
-          android:textColor="@color/md_text_light_caption"
+          android:textColor="@color/ma_text_light_secondary_70"
           android:textSize="@dimen/ma_text_caption"/>
 
       <TextView
@@ -222,7 +224,7 @@
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/typography_sample_spacing"
           android:text="Button"
-          android:textColor="@color/md_text_light_button"
+          android:textColor="@color/ma_text_light_primary_100"
           android:textSize="@dimen/ma_text_button"/>
 
     </LinearLayout>
