--- a/sample/src/main/res/layout/list_row.xml
+++ b/sample/src/main/res/layout/list_row.xml
@@ -20,9 +20,9 @@
     xmlns:matandroid="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    matandroid:md_list_avatar="@drawable/ic_avatar"
-    matandroid:md_list_icon="@drawable/ic_star"
-    matandroid:md_list_item_variant="one_line_text"
-    matandroid:md_list_text_primary="@string/sample_lists_single_item"
-    matandroid:md_list_text_secondary="@string/sample_lists_secondary"
-    matandroid:md_list_text_tertiary="@string/sample_lists_tertiary"/>
+    matandroid:ma_list_avatar="@drawable/ic_avatar"
+    matandroid:ma_list_icon="@drawable/ic_star"
+    matandroid:ma_list_item_variant="one_line_text"
+    matandroid:ma_list_text_primary="@string/sample_lists_single_item"
+    matandroid:ma_list_text_secondary="@string/sample_lists_secondary"
+    matandroid:ma_list_text_tertiary="@string/sample_lists_tertiary"/>
