--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
 
 <resources>
 
-  <color name="color_square_background">@color/md_grey_300</color>
-  <color name="alternate_list_item_background">@color/md_grey_300</color>
+  <color name="color_square_background">@color/ma_grey_300</color>
+  <color name="alternate_list_item_background">@color/ma_grey_300</color>
 
 </resources>
