--- a/sample/src/main/res/values/styles.xml
+++ b/sample/src/main/res/values/styles.xml
@@ -19,9 +19,9 @@
 <resources>
 
   <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-    <item name="colorPrimary">@color/md_cyan_500</item>
-    <item name="colorPrimaryDark">@color/md_cyan_700</item>
-    <item name="colorAccent">@color/md_red_a200</item>
+    <item name="colorPrimary">@color/ma_cyan_500</item>
+    <item name="colorPrimaryDark">@color/ma_cyan_700</item>
+    <item name="colorAccent">@color/ma_red_a200</item>
   </style>
 
   <style name="AppTheme.NoActionBar">
